Modifications in CAT011
All code reformated using CLion automatic reformat

2.6.1 (python_v0.5.15)
19.8.2020.
Feature #135 Implement extensive JSON output format

2.6.2 (python_v0.5.16)
26.8.2020.
Issue #151 Scale does not match the spec for I062/380, subfield #22 (Position)
Issue #152 Longitude min/max is +/- 90 deg in I062/380 subfield #9 (Trajectory Intent Data)
Issue #153 Problem decoding Runway Designation in I062/390
Issue #154 Scale does not match the spec for I062/500, subfield # 3
Issue #155 Scale does not match the spec for I062/500, subfield # 5

2.7.0 (python_v0.6.0)
Issue #159 Track Angle Rate should be encoded as signed in I021/165 
Issue #160 Typos in bit value descriptions in asterix_cat021_2_4.xml
Issue #161 CAT021 - problem decoding Military Extended Squitter in Reserved Expansion Field
Issue #104 problem with Data Item I048/030, Warning/Error Conditions and Target Classification 
Issue #156 Duplicate JSON keys for I062/510 Composed Track Number
Issue #162 No JSON array for I048/030 and I062/510 if only one extent is present in the data item
Warning: with this update following items are changed in JSON and Python format
001/030, 001/130, 001/210, 002/050, 002/060, 002/080, 008/100, 008/110, 019/553, 020/030, 021/110, 023/110, 025/100, 048/030, 062/510, 252/240
Elements in those items (all variable items with only one extent) are now presented as list of dictionaries.

2.7.1 (python_v0.6.1)
Issue #166 Scale missing from Mode 5 GNSS-derived Altitude in I062/110
Issue #167 Subfield 8 of I062/380 (Trajectory Intent Status) should be defined as Variable in xml config
Issue #168 Error codes from write are not detected
Issue #169 Problem decoding BDS 4,5 reserved bits
Issue #171 Hexdata presentation is not correct for multiple records in block
RE item added to CAT010

Not versioned yet
Issue #175 Cat021 Ed2.4 SelH is not reasonable
Issue #174 Warning: ‘char* strncpy(char*, const char*, size_t)’ output may be truncated